--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
             </div>
         </div>
         <div class="main-container">
+            <a id="hero-cover" class="in-page-link"></a>
             <section class="cover unpad--bottom text-center bg--secondary">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="typed-headline"> <span class="h2 inline-block"><p>Craft beautiful, blended learning journeys with</p></span> <span class="h2 inline-block typed-text typed-text--cursor color--primary" data-typed-strings="Discussion Forums, Simulations, Quizzes, Live Sessions, Action Plans, Learning Resources, Videos, Podcases, Case Studies"> Learning</span> </div>
+                            <div class="typed-headline"> <span class="h2 inline-block"><p>Craft beautiful, blended learning journeys with</p></span> <span class="h2 inline-block typed-text typed-text--cursor color--primary" data-typed-strings="Discussion Forums, Simulations, Quizzes, Live Sessions, Action Plans, Learning Resources, Videos, Podcases, Case Studies"> Vi</span> </div>
                         </div>
                     </div>
                     <div class="row justify-content-center">
@@ -116,7 +117,8 @@
                     </div>
                 </div>
             </section>
-            <section class="imageblock switchable feature-large space--xxs">
+            <a id="feature-1" class="in-page-link"></a>
+            <section class="imageblock switchable feature-large space--xxs switchable--switch">
                 <div class="imageblock__content col-lg-6 pos-right col-md-4">
                     <div class="background-image-holder"> <img alt="image" src="img/features.png"> </div>
                 </div>
@@ -125,23 +127,6 @@
                         <div class="col-lg-5 col-md-7">
                             <h2>When it comes to learning, journeys trump events!</h2>
                             <p class="lead"> No matter how engaging individual learning events are, when they are spaced, sequenced, and organized over time, they are more impactful and lead to better outcomes. </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="switchable feature-large">
-                <div class="container">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-md-6 col-12">
-                            <div class="video-cover border--round box-shadow-wide">
-                                <div class="background-image-holder"> <img alt="image" src="img/Copy of LearningWeaver (1).png"> </div>
-                                <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/6p45ooZOOPo?autoplay=1" allowfullscreen="allowfullscreen"></iframe> </div>
-                        </div>
-                        <div class="col-md-6 col-lg-5">
-                            <div class="switchable__text">
-                                <h2>What is LearningWeaver?</h2>
-                                <p class="lead"> LearningWeaver is a cloud-based application that makes the tedious task of designing, deploying, and managing blended and gamified learning journeys easy. </p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -160,12 +145,12 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-7">
                             <h2><b>What is LearningWeaver?</b></h2>
-                            <p class="lead"> LearningWeaver is a cloud-based application that makes the tedious task of designing, deploying, and managing blended and gamified learning journeys easy. </p>
+                            <p> LearningWeaver is a cloud-based application that makes the tedious task of designing, deploying, and managing blended and gamified learning journeys easy. </p>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="imagebg feature-large-7 switchable switchable--switch parallax">
+            <section class="imagebg feature-large-7 switchable switchable--switch hidden-xs">
                 <div class="background-image-holder"> <img alt="background" src="img/Copy of LearningWeaver (2).png"> </div>
                 <div class="container">
                     <div class="row">
@@ -180,7 +165,22 @@
                     </div>
                 </div>
             </section>
-            <section class="imagebg feature-large-7 switchable switchable--switch space--md parallax">
+            <a id="features-large-4milestone2" class="in-page-link"></a>
+            <section class="imageblock switchable feature-large hidden-sm hidden-md hidden-lg">
+                <div class="imageblock__content col-lg-6 col-md-4 pos-right">
+                    <div class="background-image-holder"> <img alt="image" src="img/milestone1-mobile.png"> </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-5 col-md-7">
+                            <h2>Blended Learning Journeys</h2>
+                            <p class="lead">With LearningWeaver, you can divide your learning program into a series of milestones and break down each milestone into a blended learning plan.<br></p>
+                            <p class="lead"> Add podcasts, videos, reading resources, live sessions, refresher quizzes, threaded discussion forums, assignments and action plans, reflection journals, and learning activities to create your blended plan. </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="imagebg feature-large-7 switchable switchable--switch space--md hidden-xs">
                 <div class="background-image-holder"> <img alt="background" src="img/features5.png"> </div>
                 <div class="container">
                     <div class="row">
@@ -191,6 +191,20 @@
                                     <p class="lead"> Gamify your learning journey with points and scores. Scores are assigned to learning activities to keep learners engaged and make up a leader board. <br><br>In addition, certain learning activities can be marked mandatory to ensure completion. </p>
                                     <hr class="short"> </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <a id="features-large-4-milestone1" class="in-page-link"></a>
+            <section class="imageblock switchable feature-large hidden-sm hidden-md hidden-lg">
+                <div class="imageblock__content col-lg-6 col-md-4 pos-right">
+                    <div class="background-image-holder"> <img alt="image" src="img/milestone2-mobile.png"> </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-5 col-md-7">
+                            <h2>Scores and Gamification</h2>
+                            <p class="lead">Gamify your learning journey with points and scores. Scores are assigned to learning activities to keep learners engaged and make up a leader board.<br><br>In addition, certain learning activities can be marked mandatory to ensure completion.</p>
                         </div>
                     </div>
                 </div>
@@ -223,7 +237,7 @@
                     </div>
                 </div>
             </section>
-            <section class="imagebg feature-large-7 switchable section--ken-burns">
+            <section class="imagebg feature-large-7 switchable section--ken-burns hidden-xs">
                 <div class="background-image-holder"> <img alt="background" src="img/feature12.png"> </div>
                 <div class="container">
                     <div class="row">
@@ -238,6 +252,20 @@
                     </div>
                 </div>
             </section>
+            <a id="features-large-4-analytics" class="in-page-link"></a>
+            <section class="imageblock switchable feature-large hidden-sm hidden-md hidden-lg">
+                <div class="imageblock__content col-lg-6 col-md-4 pos-right">
+                    <div class="background-image-holder"> <img alt="image" src="img/analytics-mobile.png"> </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-5 col-md-7">
+                            <h2>Powerful Learning Analytics</h2>
+                            <p class="lead">Powerful reports help facilitators track learner engagement, identify learners at risk of dropping out, and provide clarity to program sponsors and stakeholders.<br><br>With LearningWeaver you can capture both Engagement and Proficiency metrics of your learners.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="feature-large feature-large-2">
                 <div class="container">
                     <div class="row justify-content-between">
@@ -245,7 +273,7 @@
                             <h3><b>Reliable Cloud Infrastructure</b></h3>
                             <p class="lead"> All these features are backed by secure and highly available cloud infrastructure. <br><br>In addition, our infrastructure lets you scale from smaller cohorts to programs with thousands of learners enrolled in cohorts running in parallel.</p>
                         </div>
-                        <div class="col-md-4 col-lg-4"> <img alt="Image" class="border--round box-shadow-wide" src="img/feature13.png"> </div>
+                        <div class="col-md-4 col-lg-4"> <img alt="Image" class="border--round box-shadow-wide" src="img/cloud.png"> </div>
                         <div class="col-md-4 col-lg-2">
                             <hr class="short">
                             <p> You can integrate by managing your learners directly on the platform or integrating through a SSO (single Sign On) mechanism. </p>
@@ -256,19 +284,17 @@
             <section class="switchable switchable--switch">
                 <div class="container">
                     <div class="row justify-content-around">
-                        <div class="col-md-7"> <img alt="Image" src="img/feature14.png"> </div>
-                        <div class="col-md-5 col-lg-4">
+                        <div class="col-md-10"> <img alt="Image" src="img/feature14.png"> </div>
+                        <div class="col-lg-4 col-md-5">
                             <div class="switchable__text">
                                 <h3><b>Learner Tested</b></h3>
                                 <p class="lead"> LearningWeaver is learner tested and is already powering high impact learning journeys in multiple organisations. <br><br>We can't wait to work with your learning designers and learners. </p>
-                                <hr class="short">
-                                <p> Each purchase of Stack includes six months of free support and lifetime free content and bug-fix updates. </p>
-                            </div>
+                                <hr class="short"> </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="space--xs imageblock switchable feature-large">
+            <section class="space--xs imageblock switchable feature-large hidden-xs">
                 <div class="imageblock__content col-lg-6 col-md-4 pos-right">
                     <div class="background-image-holder"> <img alt="image" src="img/signup1.png"> </div>
                 </div>
@@ -277,15 +303,81 @@
                         <div class="col-lg-5 col-md-7">
                             <h2>Enter your details so we can connect with you</h2>
                             <p class="lead">Our team is excited to show how you can craft<br>beautiful and blended learning journeys</p>
-                            <form name="demo" method="POST" data-netlify="true">
+                            <form>
                                 <div class="row">
-                                    <div class="col-12"> <input type="text" name="Name" placeholder="Name"> </div>
                                     <div class="col-12"> <input type="email" name="Email Address" placeholder="Email Address"> </div>
                                     <div class="col-12"> <input type="password" name="Password" placeholder="Phone"> </div>
                                     <div class="col-12"> <button type="submit" class="btn btn--primary type--uppercase">SignupforDemo</button> </div>
                                     <div class="col-12"> <span class="type--fine-print">By signing up, you agree to the <a href="#">Terms of Service</a></span> </div>
                                 </div>
                             </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="page-navigator">
+                <ul>
+                    <li>
+                        <a href="#section2" class="inner-link" data-title="Section 2"> </a>
+                    </li>
+                    <li>
+                        <a href="#section3" class="inner-link" data-title="Section 3"> </a>
+                    </li>
+                </ul>
+            </section>
+            <section class="switchable hidden-sm hidden-md hidden-lg">
+                <div class="container">
+                    <div class="row justify-content-between">
+                        <div class="col-md-6 col-lg-5">
+                            <div class="mt--3">
+                                <h1>Enter your details so we can connect with you</h1>
+                                <p class="lead">Our team is excited to show how you can craft<br>beautiful and blended learning journeys</p>
+                                <hr class="short">
+                                <form>
+                                    <div class="row">
+                                        <div class="col-12"> <input type="email" name="Email Address" placeholder="Email Address"> </div>
+                                        <div class="col-12"> <input type="password" name="Password" placeholder="Password"> </div>
+                                        <div class="col-12"> <button type="submit" class="btn btn--primary">Create Account</button> </div>
+                                        <div class="col-12"> <span class="type--fine-print">By signing up, you agree to the <a href="#">Terms of Service</a></span> </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 col-md-7"> <img alt="Image" class="border--round box-shadow-wide" src="img/signup1.png"> </div>
+                    </div>
+                </div>
+            </section>
+            <section class="switchable hidden-sm hidden-md hidden-lg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-7 text-center"> <img alt="Image" src="img/signup1.png"> </div>
+                        <div class="col-md-5">
+                            <div class="switchable__text">
+                                <h2>Get hot monthly offers direct to your inbox</h2>
+                                <p class="lead"> Build lean, beautiful websites with a clean and contemporary look to suit a range of purposes. </p>
+                                <form action="//mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8" data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name and email address and agree to the terms."> <input class="validate-required" type="text" name="NAME" placeholder="Your Name"> <input class="validate-required validate-email" type="email" name="EMAIL" placeholder="Email Address"> <input class="validate-required" type="checkbox" name="group[13737][1]"> <span>I have read and agree to the <a href="#">terms and conditions</a></span> <button type="submit" class="btn btn--primary type--uppercase">Subscribe To Newsletter</button>
+                                    <div style="position: absolute; left: -5000px" aria-hidden="true"> <input type="text" name="b_77142ece814d3cff52058a51f_f300c9cce8" tabindex="-1" value=""> </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="switchable hidden-sm hidden-md hidden-lg">
+                <div class="container">
+                    <div class="row justify-content-between">
+                        <div class="col-md-6 col-lg-5">
+                            <div class="switchable__text">
+                                <h2>Premium design backed by<br class="hidden-xs hidden-sm"> friendly support</h2>
+                                <p class="lead"> Our customers love the comfort that comes with six-months of included support. Our dedicated support forum makes support hassle-free. </p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="bg--secondary boxed boxed--border boxed--lg">
+                                <form action="//mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8" data-success="Thanks for signing up.  Please check your inbox for a confirmation email." data-error="Please provide your name, email address and agree to the terms."> <input class="validate-required" type="text" name="NAME" placeholder="Your Name"> <input class="validate-required validate-email" type="email" name="EMAIL" placeholder="Email Address"> <input class="validate-required" type="checkbox" name="group[13737][1]"> <span>I have read and agree to the <a href="#">terms and conditions</a></span> <button type="submit" class="btn btn--primary type--uppercase">Subscribe To Newsletter</button>
+                                    <div style="position: absolute; left: -5000px" aria-hidden="true"> <input type="text" name="b_77142ece814d3cff52058a51f_f300c9cce8" tabindex="-1" value=""> </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
