--- a/mobile.html
+++ b/mobile.html
@@ -126,7 +126,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-7">
                             <h2>When it comes to learning, journeys trump events!</h2>
-                            <p class="lead"> No matter how engaging individual learning events are, when they are spaced, sequenced, and organized over time, they are more impactful and lead to better outcomes. </p>
+                            <p> No matter how engaging individual learning events are, when they are spaced, sequenced, and organized over time, they are more impactful and lead to better outcomes. </p>
                         </div>
                     </div>
                 </div>
@@ -174,8 +174,8 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-7">
                             <h2>Blended Learning Journeys</h2>
-                            <p class="lead">With LearningWeaver, you can divide your learning program into a series of milestones and break down each milestone into a blended learning plan.<br></p>
-                            <p class="lead"> Add podcasts, videos, reading resources, live sessions, refresher quizzes, threaded discussion forums, assignments and action plans, reflection journals, and learning activities to create your blended plan. </p>
+                            <p>With LearningWeaver, you can divide your learning program into a series of milestones and break down each milestone into a blended learning plan.<br></p>
+                            <p> Add podcasts, videos, reading resources, live sessions, refresher quizzes, threaded discussion forums, assignments and action plans, reflection journals, and learning activities to create your blended plan. </p>
                         </div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-7">
                             <h2>Scores and Gamification</h2>
-                            <p class="lead">Gamify your learning journey with points and scores. Scores are assigned to learning activities to keep learners engaged and make up a leader board.<br><br>In addition, certain learning activities can be marked mandatory to ensure completion.</p>
+                            <p>Gamify your learning journey with points and scores. Scores are assigned to learning activities to keep learners engaged and make up a leader board.<br><br>In addition, certain learning activities can be marked mandatory to ensure completion.</p>
                         </div>
                     </div>
                 </div>
@@ -213,13 +213,13 @@
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-md-4 col-lg-3">
-                            <h3><b>Action Plans</b></h3>
-                            <p class="lead"> Learning designers are constantly asked to prove the effectiveness of learning. With LearningWeaver, your learners can create and manage action plans. <br><br>Action plans are short tasks or projects that measure the transfer of learning from the program to the real world. Action plans can be self-evaluated or evaluated by a facilitator. </p>
+                            <h3>Action Plans</h3>
+                            <p> Learning designers are constantly asked to prove the effectiveness of learning. With LearningWeaver, your learners can create and manage action plans. <br><br>Action plans are short tasks or projects that measure the transfer of learning from the program to the real world. Action plans can be self-evaluated or evaluated by a facilitator. </p>
                         </div>
                         <div class="col-md-4 col-lg-4"> <img alt="Image" class="border--round box-shadow-wide" src="img/features 9.png"> </div>
                         <div class="col-md-4 col-lg-2">
                             <hr class="short">
-                            <p class="lead"> Scores from the Action Plan can be added to the leader board and made mandatory. </p>
+                            <p> Scores from the Action Plan can be added to the leader board and made mandatory. </p>
                         </div>
                     </div>
                 </div>
@@ -230,8 +230,8 @@
                         <div class="col-md-7"> <img alt="Image" src="img/feature9.png"> </div>
                         <div class="col-md-5 col-lg-4">
                             <div class="switchable__text">
-                                <h3><b>Certification</b></h3>
-                                <p class="lead"> You can also create certificates that participants can download after achieving a threshold score or completing the mandatory learning activities. </p>
+                                <h3>Certification</h3>
+                                <p> You can also create certificates that participants can download after achieving a threshold score or completing the mandatory learning activities. </p>
                                 <hr class="short"> </div>
                         </div>
                     </div>
@@ -261,7 +261,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-7">
                             <h2>Powerful Learning Analytics</h2>
-                            <p class="lead">Powerful reports help facilitators track learner engagement, identify learners at risk of dropping out, and provide clarity to program sponsors and stakeholders.<br><br>With LearningWeaver you can capture both Engagement and Proficiency metrics of your learners.</p>
+                            <p>Powerful reports help facilitators track learner engagement, identify learners at risk of dropping out, and provide clarity to program sponsors and stakeholders.<br><br>With LearningWeaver you can capture both Engagement and Proficiency metrics of your learners.</p>
                         </div>
                     </div>
                 </div>
@@ -270,8 +270,8 @@
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-md-4 col-lg-3">
-                            <h3><b>Reliable Cloud Infrastructure</b></h3>
-                            <p class="lead"> All these features are backed by secure and highly available cloud infrastructure. <br><br>In addition, our infrastructure lets you scale from smaller cohorts to programs with thousands of learners enrolled in cohorts running in parallel.</p>
+                            <h3>Reliable Cloud Infrastructure</h3>
+                            <p> All these features are backed by secure and highly available cloud infrastructure. <br><br>In addition, our infrastructure lets you scale from smaller cohorts to programs with thousands of learners enrolled in cohorts running in parallel.</p>
                         </div>
                         <div class="col-md-4 col-lg-4"> <img alt="Image" class="border--round box-shadow-wide" src="img/cloud.png"> </div>
                         <div class="col-md-4 col-lg-2">
@@ -287,8 +287,9 @@
                         <div class="col-md-10"> <img alt="Image" src="img/feature14.png"> </div>
                         <div class="col-lg-4 col-md-5">
                             <div class="switchable__text">
-                                <h3><b>Learner Tested</b></h3>
-                                <p class="lead"> LearningWeaver is learner tested and is already powering high impact learning journeys in multiple organisations. <br><br>We can't wait to work with your learning designers and learners. </p>
+                                <h3>Learner Tested</h3>
+                                <p> LearningWeaver is learner tested and is already powering high impact learning journeys in multiple organisations. <br><br>We can't wait to work with your learning designers and learners. </p>
+                                <p> LearningWeaver is learner tested and is already powering high impact learning journeys in multiple organisations. <br><br>We can't wait to work with your learning designers and learners. </p>
                                 <hr class="short"> </div>
                         </div>
                     </div>
@@ -332,7 +333,7 @@
                         <div class="col-md-5">
                             <div class="switchable__text">
                                 <h2>Enter your details so we can connect with you</h2>
-                                <p class="lead">Our team is excited to show how you can craft<br>beautiful and blended learning journeys</p>
+                                <p>Our team is excited to show how you can craft<br>beautiful and blended learning journeys</p>
                                 <form name="demo" method="POST" data-netlify="true">
                                     <div class="row">
                                         <div class="col-12"> <input type="text" name="Name" placeholder="Name"> </div>
