--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
                             <article class="feature feature-1">
                                 <a href="#" class="block"> <img alt="Image" src="img/lw-hdfc.webp"> </a>
                                 <div class="feature__body boxed boxed--border"> <span> </span>
-                                    <h5>A day in the life of a professional fitness blogger</h5> <a href="#">
+                                    <h5>Powering the First Time Manager Journey at HDFC Bank
+                                    </h5> <a href="#">
 							Read More
 						</a> </div>
                             </article>
@@ -269,7 +270,9 @@
                             <article class="feature feature-1">
                                 <a href="#" class="block"> <img alt="Image" src="img/lw-minda.png"> </a>
                                 <div class="feature__body boxed boxed--border"> <span> </span>
-                                    <h5>Small businesses that expertly leverage their online followings</h5> <a href="#">
+                                    <h5>Powering the High Potential Learning Journey at Uno Minda
+
+                                    </h5> <a href="#">
 							Read More
 						</a> </div>
                             </article>
