--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="active">
+                        <li>
                             <div class="tab__title text-center"> <i class="icon block icon-Medal-2 icon--sm"></i> <span class="h5"><p>Score &amp; Gamify</p></span> </div>
                             <div class="tab__content">
                                 <div class="container switchable switchable--switch">
@@ -420,10 +420,10 @@
                         </div>
                         <div class="col-sm-6 col-md-9 col-xs-6">
                             <div class="row" style="margin-top: 0;">
-                                <div class="col-sm-3 col-xs-2">
+                                <div class="col-4 col-sm-2 ">
                                     <img class="img-fluid" alt="Image" src="img/lw-henry.png">
                                 </div>
-                                <div class="col-sm-9">
+                                <div class="col-6 col-sm-9">
                                     <h3>“Anyone who stops learning is old, whether at twenty or eighty. Anyone who keeps learning stays young.”
                                         Henry Ford
                                         </h3> 
@@ -435,7 +435,7 @@
                     
                     </div>
                     <div class="row">
-                        <div class="col-sm-6"> <span class="type--fine-print">© <span class="update-year">2022</span>&nbsp;Transcendix LLP</span> <a class="type--fine-print" href="#">Privacy Policy</a> <a class="type--fine-print" href="#">Legal</a> </div>
+                        <div class="col-sm-6"> <span class="type--fine-print">© <span class="update-year">2022</span>&nbsp;Transcendix LLP</span> <a class="type--fine-print" href="privacy.html">Privacy Policy</a> <a class="type--fine-print" href="#">Legal</a> </div>
                         <div class="col-sm-6 text-right text-left-xs">
                             <ul class="social-list list-inline list--hover">
                                 <li><a href="#"><i class="socicon socicon-google icon icon--xs"></i></a></li>
