--- a/privacy.html
+++ b/privacy.html
@@ -44,14 +44,14 @@
                             <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
                                 <div class="bar__module">
                                     <ul class="menu-horizontal text-left">
-                                        <li> <a href="#features">Features</a> </li>
-                                        <li> <a href="#pricing">Pricing</a> </li>
-                                        <li> <a href="#blog">Blog</a> </li>
+                                        <li> <a href="index.html#features">Features</a> </li>
+                                        <li> <a href="index.html#pricing">Pricing</a> </li>
+                                        <li> <a href="index.html#blog">Blog</a> </li>
                                        
                                     </ul>
                                 </div>
                                 <div class="bar__module">
-                                    <a class="btn btn--sm btn--primary type--uppercase" href="#demo"> <span class="btn__text">
+                                    <a class="btn btn--sm btn--primary type--uppercase" href="index.html#demo"> <span class="btn__text">
                                     Setup A demo</span> </a>
                                 </div>
                             </div>
