--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@
                         <div class="col-lg-6 col-md-4 col-12">
                             <div class="video-cover border--round box-shadow-wide">
                                 <div class="background-image-holder"> <img alt="image" src="img/lw22.png"> </div>
-                                <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/" allowfullscreen="allowfullscreen"></iframe> </div>
+                                <div class="video-play-icon"></div>  
+                                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/_XS5iCcILNU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                                
+                            
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -258,21 +263,21 @@
                     <div class="row">
                         <div class="col-md-4">
                             <article class="feature feature-1">
-                                <a href="#" class="block"> <img alt="Image" src="img/lw-hdfc.webp"> </a>
+                                <a href="hdfc.html" class="block"> <img alt="Image" src="img/lw-hdfc.webp"> </a>
                                 <div class="feature__body boxed boxed--border"> <span> </span>
                                     <h5>Powering the First Time Manager Journey at HDFC Bank
-                                    </h5> <a href="#">
+                                    </h5> <a href="hdfc.html">
 							Read More
 						</a> </div>
                             </article>
                         </div>
                         <div class="col-md-4">
                             <article class="feature feature-1">
-                                <a href="#" class="block"> <img alt="Image" src="img/lw-minda.png"> </a>
+                                <a href="uno-minda.html" class="block"> <img alt="Image" src="img/lw-minda.png"> </a>
                                 <div class="feature__body boxed boxed--border"> <span> </span>
                                     <h5>Powering the High Potential Learning Journey at Uno Minda
 
-                                    </h5> <a href="#">
+                                    </h5> <a href="uno-minda.html">
 							Read More
 						</a> </div>
                             </article>
