--- a/hdfc.html
+++ b/hdfc.html
@@ -121,8 +121,8 @@ The Trailblaze program will cover 200+ participants in 10 batches over the next 
                                 data-host="https://cusdis.com"
                                 data-app-id="7422e6be-3bd4-41ae-bac8-626949ef5cef"
                                 data-page-id="{{ PAGE_ID }}"
-                                data-page-url="{{ PAGE_URL }}"
-                                data-page-title="{{ PAGE_TITLE }}"
+                                data-page-url="learningweaver.com/hdfc.html"
+                                data-page-title="HDFC Blog"
                               ></div>
                                 
                             </article>
