--- a/uno-minda.html
+++ b/uno-minda.html
@@ -116,8 +116,8 @@
   data-host="https://cusdis.com"
   data-app-id="7422e6be-3bd4-41ae-bac8-626949ef5cef"
   data-page-id="{{ PAGE_ID }}"
-  data-page-url="{{ PAGE_URL }}"
-  data-page-title="{{ PAGE_TITLE }}"
+  data-page-url="learningweaver.com/uno-minda.html"
+  data-page-title="learningweaver.com/hdfc.html"
 ></div>
 
                             </article>
