--- a/hdfc.html
+++ b/hdfc.html
@@ -17,6 +17,15 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet" type="text/css">
         <link href="css/font-raleway.css" rel="stylesheet" type="text/css">
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H3029B6RE1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H3029B6RE1');
+</script>
     </head>
     <body data-smooth-scroll-offset="77">
         <div class="nav-container">
