--- a/uno-minda.html
+++ b/uno-minda.html
@@ -17,6 +17,15 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet" type="text/css">
         <link href="css/font-raleway.css" rel="stylesheet" type="text/css">
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H3029B6RE1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H3029B6RE1');
+</script>
     </head>
     <body data-smooth-scroll-offset="77">
         <div class="nav-container">
@@ -179,6 +188,8 @@
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'G-H3029B6RE1', 'auto'); ga('send', 'pageview');
         </script>
+
+
 
     </body>
 
