--- a/uno-minda.html
+++ b/uno-minda.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Learningweaver - Uno Minda</title>
+        <title>LearningWeaver - Uno Minda</title>
         <meta name="description" content="LearningWeaver is a cloud-based application that makes the tedious task of designing, deploying, and managing blended and gamified learning journeys easy." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
@@ -126,8 +126,8 @@
   data-host="https://cusdis.com"
   data-app-id="7422e6be-3bd4-41ae-bac8-626949ef5cef"
   data-page-id="{{ PAGE_ID }}"
-  data-page-url="learningweaver.com/uno-minda.html"
-  data-page-title="learningweaver.com/hdfc.html"
+  data-page-url="LearningWeaver.com/uno-minda.html"
+  data-page-title="LearningWeaver.com/hdfc.html"
 ></div>
 
                             </article>
