--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Learningweaver</title>
+        <title>LearningWeaver</title>
         <meta name="description" content="LearningWeaver is a cloud-based application that makes the tedious task of designing, deploying, and managing blended and gamified learning journeys easy." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
