--- a/hdfc.html
+++ b/hdfc.html
@@ -77,7 +77,7 @@
                         <div class="col-md-10 col-lg-8">
                             <article>
                                 <div class="article__title text-center">
-                                    <h1 class="h2">LearningWeaver powers the First Time Manager journey at HDFC Bank</h1> <!--span>May 2nd 2016 in </span><!--span><a href="#">Web Design</a></span--> </div>
+                                    <h1 class="h2">LearningWeaver Powers The First Time Managers Journey at HDFC Bank</h1> <!--span>May 2nd 2016 in </span><!--span><a href="#">Web Design</a></span--> </div>
                                 <div class="article__body"> <img class="img-fluid rounded mx-auto d-block
                                     " alt="Image" src="img/lw-hdfc.jpg">
                                     <p><br>The LearningWeaver platform is powering Trailblaze, an intense 6-weeks learning journey for First Time Managers at HDFC Bank.&nbsp; &nbsp; &nbsp;<br><br>The learning journey, jointly designed by the HDFC Bank L&amp;D team and Skills Café and delivered using the LearningWeaver platform is helping young and new managers at the bank in embracing the challenges that come with the new role.&nbsp; &nbsp;&nbsp;<br></p>
@@ -127,7 +127,7 @@ The Trailblaze program will cover 200+ participants in 10 batches over the next 
 								Share on Twitter
 							</span> </a>
                                 </div>
-                                <div id="cusdis_thread"
+                                <div class="py-5" id="cusdis_thread"
                                 data-host="https://cusdis.com"
                                 data-app-id="7422e6be-3bd4-41ae-bac8-626949ef5cef"
                                 data-page-id="{{ PAGE_ID }}"
