--- a/uno-minda.html
+++ b/uno-minda.html
@@ -77,7 +77,7 @@
                         <div class="col-md-10 col-lg-8">
                             <article>
                                 <div class="article__title text-center">
-                                    <h1 class="h2">Custom learning journeys at Uno Minda</h1> <!--span>May 2nd 2016 in </span><!--span><a href="#">Web Design</a></span--> </div>
+                                    <h1 class="h2">Custom Blended Learning Journeys at Uno Minda</h1> <!--span>May 2nd 2016 in </span><!--span><a href="#">Web Design</a></span--> </div>
                                 <div class="article__body"> <img class="img-fluid rounded mx-auto d-block
                                     " alt="Image" src="img/lw-minda.png">
                                     
@@ -122,7 +122,7 @@
 							</span> </a>
                                 </div>
 
-                                <div id="cusdis_thread"
+                                <div class="py-5" id="cusdis_thread"
   data-host="https://cusdis.com"
   data-app-id="7422e6be-3bd4-41ae-bac8-626949ef5cef"
   data-page-id="{{ PAGE_ID }}"
