--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                 </div>
             </section>
             <a id="2-section-title-1" class="in-page-link"></a>
-            <section class="text-center pt-4 space--sm">
+            <section class="text-center pt-5 space--sm">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 col-lg-8">
-                            <h3 >
+                            <h3 class="m-0" >
 					Powering learning journeys at</h3>
                         </div>
                     </div>
