--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                             <h2>Design gamified and blended learning journeys with LearningWeaver </h2>
                             <form name="signup-top" method="POST" data-netlify="true" >
                                 <div class="row">
-                                    <div class="col-12"> <input type="email" name="Email Address" placeholder="sarah@mywork.in"> </div>
-                                    <div class="col-12"> <input type="password" name="Password" placeholder="phone"> </div>
+                                    <div class="col-12"> <input type="email" name="Email Address" placeholder="email: sarah@mywork.in"> </div>
+                                    <div class="col-12"> <input type="phone" name="Phone" placeholder="phone: +1 023 8798567"> </div>
                                     <div class="col-12"> <button type="submit" class="btn btn--primary type--uppercase">setup a demo</button> </div>
                                 </div>
                             </form>
