--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 </div>
             </section>
             <a id="pricing" class="in-page-link"></a>
-            <section class="switchable space--xs bg--secondary" >
+            <!--section class="switchable space--xs bg--secondary" >
                 <div class="container">
                     <div class="row justify-content-between" >
                         
@@ -346,7 +346,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section-->
             <a id="faq-text-layout-2" class="in-page-link"></a>
             <section class="space--xs">
                 <div class="container">
